# insurance-pricing

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/data/: test.csv  train.csv  transform_params.joblib
backend/models/: feature_transformer.joblib
backend/models/ag_insurance/: learner.pkl  metadata.json  predictor.pkl
backend/models/ag_insurance/models/: trainer.pkl
backend/models/ag_insurance/models/ExtraTreesReg/: model.pkl
backend/models/ag_insurance/models/ExtraTreesReg_BAG_L1/: model.pkl
backend/models/ag_insurance/models/ExtraTreesReg_BAG_L1_FULL/: model.pkl
backend/models/ag_insurance/models/ExtraTreesReg_BAG_L2/: model.pkl
backend/notebooks/: eda_report.md  evaluation_report.md
backend/src/insurance_pricing/: .env.example  __init__.py  config.py  explainability.py  interpretation.py  lifespan.py  main.py  model.py  schemas.py  settings.py
backend/src/insurance_pricing/api/: __init__.py  prediction.py  router.py  web.py
backend/src/insurance_pricing/app/: __init__.py
backend/src/insurance_pricing/frontend/: README.md
backend/src/insurance_pricing/schemas/: __init__.py  predict.py  reports.py
backend/src/insurance_pricing/services/: __init__.py  explainability.py  llm_interpretation.py  model_loader.py  predictor.py
backend/src/scripts/: __init__.py  ag_metrics.py  evaluate_model.py  prepare_data.py  run_eda.py  train_model.py
backend/src/train/: .env.example  README.md  main.py  settings.py
backend/src/train/stages/: __init__.py  ag_metrics.py  evaluate_model.py  prepare_data.py  run_eda.py  train_model.py
frontend/: Dockerfile  package.json  (+2 more)
(+68 files in other folders)
